crates/spoor-cli/tests/snapshots/pptx__basic_slides_with_titles_and_bullets.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

### Title Slide

A subtitle

## Slide 2

### Second slide

- First bullet
- Second bullet
    - Nested item
