crates/spoor-cli/tests/snapshots/pptx__bullet_levels_numbering_and_opt_out_are_preserved.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

### Bulleted body

- Level zero
    - Level one
        - Level two
1. Numbered item

No bullet here
