crates/spoor-cli/tests/snapshots/pptx__chart_data_is_extracted_as_a_table_with_no_incompleteness_warning.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

### Numbers live in the chart

Chart: Quarterly performance

|  | Revenue | Cost |
| --- | --- | --- |
| Q1 | 100 | 80 |
| Q2 | 120 | 90 |
| Q3 | 140 | 95 |
