crates/spoor-cli/tests/snapshots/pptx__group_shapes_flatten_in_visual_order.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

Grouped alpha

Grouped beta

After the group
