crates/spoor-cli/tests/snapshots/pptx__hidden_slides_keep_their_number_and_surface_a_warning.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

### Visible one

## Slide 2

## Slide 3

### Visible three
