crates/spoor-cli/tests/snapshots/pptx__image_placeholders_follow_slide_order_and_only_reference_safe_entries.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

### Slide one

![PPTX image 1 (slide 1): image.png](spoor://pptx/part/ppt/media/image1.png)

## Slide 2

### Slide two

![PPTX image 2 (slide 2): image.png](spoor://pptx/part/ppt/media/image1.png)

![PPTX image 3 (slide 2): image.png](spoor://pptx/part/ppt/media/image2.png)

## Slide 3

### Slide three (no images)
