crates/spoor-cli/tests/snapshots/pptx__missing_presentation_part_falls_back_to_filename_order.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

### Alpha

## Slide 2

### Beta

## Slide 3

### Gamma
