crates/spoor-cli/tests/snapshots/pptx__notes_page_number_furniture_does_not_leak.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

### Notes with furniture

Notes:

Real speaker notes.
