crates/spoor-cli/tests/snapshots/pptx__reading_order_follows_geometry_not_z_order.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

Top left

Top right

Bottom row
