crates/spoor-cli/tests/snapshots/pptx__slides_follow_presentation_order_not_filename_order.snap
---
source: crates/spoor-cli/tests/pptx.rs
expression: out
---
## Slide 1

### Gamma

## Slide 2

### Alpha

## Slide 3

### Beta
